# warships-player-stats

./: .gitignore  Cargo.toml  README.md  settings.toml.example
.github/: dependabot.yml
src/: cheatsheet.rs  database.rs  error.rs  gameparams.rs  histogram.rs  main.rs  progress_logger.rs  scraper.rs  ships.rs  statistics.rs  wows_data.rs
templates/: cheatsheet.html  playerstats.html  playerstats.txt
