[package]
name = "wows-player-stats"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.6"
tokio = { version = "0.2", features = ["macros", "fs"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.5"
itertools = "0.9.0"
stream_throttle = "0.3.1"
thiserror = "1.0.19"
bincode = "1.2.1"
flate2 = { version = "1.0.14", features = ["tokio"] }
sled = "0.32.0-rc1"
histogram = "0.6.9"
rocket = "0.4.5"
config = "0.10.1"
