[package]
name = "wows-player-stats"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.8"
#tokio = { version = "0.2", features = ["macros", "fs"] }
tokio = { version = "1.15", features = ["full", "tracing"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.5"
itertools = "0.9.0"
stream_throttle = "0.4.0"
thiserror = "1.0.19"
bincode = "1.2.1"
flate2 = { version = "1.0.14", features = ["tokio"] }
sled = "0.32.0-rc1"
histogram = "0.6.9"
rocket = "0.5.0-rc.1"
config = "0.11.0"
tera = "1.8.0"
libflate = "1.1.0"
serde-pickle = "0.6.2"
include-flate = "0.1.3"
async-channel = "1.6.1"
console-subscriber = "*"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
mongodb = "2.1.0"
bson = "2.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
simple_logger = "1.16.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
