[package]
name = "wows-player-stats"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.8"
tokio = { version = "1.15", features = ["full", "tracing"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.5"
itertools = "0.9.0"
stream_throttle = "0.4.0"
thiserror = "1.0.19"
histogram = "0.6.9"
rocket = "0.5.0-rc.1"
config = "0.11.0"
tera = "1.8.0"
async-channel = "1.6.1"
mongodb = "2.1.0"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
tracing = "0.1.29"
tracing-subscriber = "0.3.7"
timeago = "0.3.0"
